Add Redux and Middleware for article show page add with span keyword functinality

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>
+      Rohit Azad || UI Developer React Js Developer , JavaScript Developer
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
